# Krafthack-2022

./: .gitignore  Consolidated_notebook_2.ipynb  Machine Learning Bolt 1.ipynb  README.md  main-notebook.ipynb  pyproject.toml
.ipynb_checkpoints/: main-notebook-checkpoint.ipynb
data-exploration/: Data Exploration.ipynb  Looking at shutdown periods.ipynb  data_exploration_hrh.ipynb
machine-learning-notebooks/: Consolidated_notebook-3.ipynb  Consolidated_notebook_2.ipynb  Machine Learning Attempt 1.ipynb  Machine Learning Bolt 1.ipynb
notebooks/: Consolidated_notebook-3.ipynb  Consolidated_notebook.ipynb  Consolidated_notebook_2.ipynb  model_rev_1.ipynb
