[tool.poetry]
name = "krafthack-2022"
version = "0.1.0"
description = ""
authors = ["Andris Piebalgs <andris.piebalgs@cognite.com>", "Hayden Hohns <hayden.hohns@cognite.com>", "Simon Stavland <simon.stavland@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
pandas = "^1.4.1"
scikit-learn = "^1.0.2"
xgboost = "^1.5.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
